2013-07-04  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* src/html/omp.xsl (result [result-headers]): Get severity from
	severity element instead of NVT's cvss_base.
	(result [result-body]): Add NVT version at scan time if available.
	(report [vulns], report [os-severity], report [unknown-os-severity])
	(report [app-severity], report [errors]): Get severity from severity
	element instead of NVT's cvss_base.

2013-07-03  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* src/html/gsa-style.css (result_header, result_section_top): Add
	background color.
	(result_section): New class.
	(result_header_right, result_header_left): Remove.

	* src/html/omp.xsl (report [results]): Reduce cell spacing for results
	tables.
	(result [result-headers]): Add check and apply result header class.
	Remove inner table in result header cells and adjust to display
	correctly.

2013-07-02  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* src/html/omp.xsl (report [ports]): Rename Threat to Severity. Update
	severity bar to use cvss value accordingly.

2013-07-01  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* src/gsad_omp.c (save_task_omp, create_lsc_credential_omp)
	(save_lsc_creential_omp, save_agent_omp, save_alert_omp)
	(create_target_omp, create_tag_omp, save_tag_omp, save_target_omp)
	(save_config_omp, create_note_omp, create_override_omp, save_slave_omp)
	(save_report_format_omp: Remove associated CHECK macro and use
	CHECK_PARAM macro instead. Reorganize code so that parameter checking
	comes before new connection to manager is made.
	(edit_config): New function
	(edit_config_omp): Call edit_config.

	* src/html/omp.xsl (get_config_response): Match gsad_msg.

2013-07-01  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* src/gsad_omp.c (CHECK_PARAM): New macro.
	(create_group_omp, save_group_omp, create_permission_omp)
	(save_permission_omp, create_port_list_omp, create_port_range_omp)
	(save_port_list_omp, save_port_range_omp, create_filter_omp)